--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,14 @@ pre {
   max-height: 340px;
   overflow-y: scroll; }
 
+.profle_photo{
+  @media (min-width:576px) {
+    .profile_photo{
+      height: 20%;
+    }    
+  }
+}
+
 .container {
   width: 100%;
   padding-right: 15px;
