--- a/css/style.css
+++ b/css/style.css
@@ -446,13 +446,97 @@ pre {
   max-height: 340px;
   overflow-y: scroll; }
 
-.profle_photo{
-  @media (min-width:576px) {
-    .profile_photo{
-      height: 20%;
-    }    
+
+  .profile_photo{
+    width: 150px;
+    height: 150px;
   }
+  @media(min-width:576px) {
+    .profile_photo{
+      height: 100px;
+      width: 100px;
+
+    }
+  }
+  @media (min-width:350px){
+    .profile_photo{
+      height: 175px;
+      width: 175px;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 200px;
+
+  } 
 }
+
+
+  @media (min-width: 576px) {
+    .profile_photo{
+      width: 640px;
+    height: auto; } }
+  @media (min-width: 768px) {
+    .profile_photo {
+      width: 600px;
+    height: auto; } }
+  @media (min-width: 992px) {
+     .profile_photo{
+      width: 800px; 
+    height: auto;} }
+  @media (min-width: 1200px) {
+    .profile_photo{
+    margin-top: 150px;
+    margin-left: 200px;} }
+
+    profile_photo1{
+      width: 100px;
+      height: 100px;
+    }
+    @media(min-width:576px) {
+      .profile_photo1{
+        height: 100px;
+        width: 100px;
+  
+      }
+    }
+    @media (min-width:350px){
+      .profile_photo1{
+        height: 150px;
+        margin-bottom: 40px;
+        justify-content: center;
+        align-items: center;
+        
+  
+    } 
+  }
+  
+  
+    @media (min-width: 576px) {
+      .profile_photo1{
+        width: 640px;
+      height: auto; } }
+    @media (min-width: 768px) {
+      .profile_photo1 {
+        width: 600px;
+      height: auto; } }
+    @media (min-width: 992px) {
+       .profile_photo1{
+        width: 150px; 
+      height: auto;} }
+   
+  
+    
+  
+
+
+div #photocorrector .one-third {
+  @media screen and (orientation: portrait) {
+    .order-md-last {
+        visibility: visible;
+    }
+}
+}
+
+
 
 .container {
   width: 100%;
@@ -8516,6 +8600,7 @@ h1, h2, h3, h4, h5,
           @media (max-width: 991.98px) {
             .owl-carousel.home-slider .slider-item .slider-text .one-forth {
               width: 100%;
+              height: 1150px;
               position: absolute;
               top: 0;
               left: 0;
@@ -8653,7 +8738,7 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 100%;
+  height: 1000px;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
